# python-xkbregistry

./: MANIFEST.in  README.rst  setup.cfg  setup.py
.github/workflows/: run-tests.yml
tests/: test_rxkb.py
xkbregistry/: __init__.py  ffi_build.py  rxkb.py
