[metadata]
name = xkbregistry
version = 0.3
description = Bindings for libxkbregistry using cffi
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Stephen Early
author_email = steve@assorted.org.uk
url = https://github.com/sde1000/python-xkbregistry
license = MIT
license_files =
    LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers

[options]
python_requires = >= 3.7
packages =
    xkbregistry
setup_requires =
    cffi >= 1.5.0
install_requires =
    cffi >= 1.5.0
